Merged in feature/GPXAN-51-add-cumulative-stats-on-marker (pull request #30)     [GPXAN-51] Add cumulative stats on Marker         fixed theme night colors         Redesigned marker layout         Added cumulative algo Feature/GPXAN-51 add cumulative stats on marker